--- a/index.html
+++ b/index.html
@@ -879,7 +879,7 @@
             testBtn.disabled = true;
             testBtn.textContent = '연결 테스트 중...';
             
-            const models = ['gemini-1.5-flash-latest', 'gemini-1.5-flash', 'gemini-pro'];
+            const models = ['gemini-2.5-flash', 'gemini-2.0-flash', 'gemini-2.5-pro'];
             let success = false;
             let workingModel = null;
             
